[package]
name = "metronorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
clap = { version = "3.1.12", features = ["derive"] }
# sdl2 = { version = "0.35.2", features = ["gfx"] }
winit = "0.26.1"
env_logger = "0.9.0"
log ="0.4.17"
wgpu = "0.12.0"
pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
cgmath = "0.18.0"
rand = "0.8.5"
ring-channel = "0.11.0"
